# DataTableExtraction

./: .env.example  README.md  env.example  pyproject.toml
app/: config.py  main.py
app/models/: __init__.py  data_table.py  documents.py  evidence.py  schemas.py
app/prompts/: __init__.py  canonical.py  chat.py  data_table.py  image.py  planner.py  qa.py
app/routes/: analyze.py  chat.py  data_table.py  download.py
app/services/: canonical_extractor.py  document_parser.py  evidence_layer.py  evidence_selector.py  grounding.py  image_analysis.py  llm_service.py  pipeline.py  ppt_planner.py  report_agent_team.py  session_store.py  table_agent_team.py  table_extraction.py  table_qa.py  table_revision.py  table_spec_qa.py  text_match.py
app/services/data_table/: __init__.py  cell_filler.py  cell_retriever.py  cell_verifier.py  concept_workflow.py  entity_discovery.py  evidence_store.py  exporters.py  intent.py  llm_client.py  pipeline.py  result_summary_agent.py  schema_inducer.py  source_table_populator.py  (+7 more)
app/tools/: table_pptx.py
scripts/: quick_dt_test.py  test_data_table.py  test_staged.py
tests/: conftest.py  test_backend_table.py  test_cell_verifier.py  test_concept_summary_mode.py  test_concept_workflow.py  test_data_table_exporters.py  test_data_table_models.py  test_data_table_route.py  test_document_parser.py  test_entity_discovery.py  test_evidence_chunking.py  test_long_form_composer.py  test_planner_fallback.py  test_pptx.py  test_result_summary_mode.py  test_result_summary_regression.py  test_result_table_mode.py  test_strategy_scorer.py
